--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,10 @@
-body {
+* {
+  box-sizing: border-box;
   margin: 0;
+  padding: 0;
+}
+
+body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -7,7 +12,97 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.container { 
+  max-width: 500px;
+  margin: 2em auto;
+  overflow: auto;
+  min-height: 300px;
+  border: 1px solid steelblue;
+  border-radius: 5px;
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 1.5em;
+  padding: 0.75em;
+}
+
+.btn {
+  display: inline-block;
+  background-color: #000;
+  color: #fff;
+  border: none;
+  padding: 10px 20px;
+  margin: 5px;
+  border-radius: 5px;
+  cursor: pointer;
+  text-decoration: none;
+  font-size: 1em;
+  font-family: inherit;
+}
+
+.btn:focus { outline: none;}
+
+.btn:active { transform: scale(0.98); }
+
+.btn-block { 
+  display: block;
+  width: 100%;
+}
+
+.event {
+  background: #f4f4f4;
+  margin: 5px;
+  padding: 10px 20px;
+  cursor: pointer;
+}
+
+.event.reminder{ 
+  border-left: 5px solid green;
+}
+
+.event h3 {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.add-form { margin-bottom: 2.5em; }
+
+.form-control {
+  margin: 1.15em 0;
+}
+
+.form-control label {
+  display: block;
+}
+
+.form-control input {
+  width: 100%;
+  margin: 5px;
+  height: 40px;
+  padding: 3px 7px;
+  font-size: 1em;
+}
+
+.form-control-check {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.form-control-check label {
+  flex: 1;
+}
+
+.form-control-check input {
+  flex: 2;
+  height: 20px;
+}
+
+footer { 
+  margin-top: 30px;
+  text-align: center;
 }
