--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,7 @@ body {
 .container { 
   max-width: 500px;
   margin: 2em auto;
+  padding: 1.5em;
   overflow: auto;
   min-height: 300px;
   border: 1px solid steelblue;
@@ -26,7 +27,6 @@ body {
   justify-content: space-between;
   align-items: center;
   margin-bottom: 1.5em;
-  padding: 0.75em;
 }
 
 .btn {
@@ -36,7 +36,6 @@ body {
   border: none;
   padding: 10px 20px;
   margin: 5px;
-  border-radius: 5px;
   cursor: pointer;
   text-decoration: none;
   font-size: 1em;
@@ -48,22 +47,24 @@ body {
 .btn:active { transform: scale(0.98); }
 
 .btn-block { 
-  display: block;
+  display: inline-block;
   width: 100%;
+  margin: 0 auto;
 }
 
-.event {
+
+.task {
   background: #f4f4f4;
   margin: 5px;
   padding: 10px 20px;
   cursor: pointer;
 }
 
-.event.reminder{ 
+.task.reminder{ 
   border-left: 5px solid green;
 }
 
-.event h3 {
+.task h3 {
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -72,16 +73,16 @@ body {
 .add-form { margin-bottom: 2.5em; }
 
 .form-control {
-  margin: 1.15em 0;
+  padding: 1.15em 0;
 }
 
 .form-control label {
   display: block;
 }
 
-.form-control input {
+.form-control input{
   width: 100%;
-  margin: 5px;
+  margin: 0.5em auto;
   height: 40px;
   padding: 3px 7px;
   font-size: 1em;
@@ -94,12 +95,12 @@ body {
 }
 
 .form-control-check label {
-  flex: 1;
+  flex: 11;
 }
 
 .form-control-check input {
-  flex: 2;
-  height: 20px;
+  flex: 1;
+  height: 25px;
 }
 
 footer { 
